# captrack

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml.example
.github/workflows/: ci.yml
captrack-macros/: Cargo.toml
captrack-macros/src/: lib.rs
captrack-pgo/: Cargo.toml
captrack-pgo-lint/: .gitignore  Cargo.toml  rust-toolchain.toml
captrack-pgo-lint/examples/: bytes_mut_cap.rs  dashmap_cap.rs  dashmap_hasher.rs  indexmap_cap.rs  indexmap_hasher.rs  indexset_cap.rs  indexset_hasher.rs  scc_hashmap_cap.rs  scc_hashmap_hasher.rs  scc_hashset_cap.rs  scc_hashset_hasher.rs  scc_treeindex_cap.rs  smallvec_cap.rs
captrack-pgo-lint/src/: instrument.rs  lib.rs  loader.rs  model.rs  rules.rs
captrack-pgo-lint/tests/: per_type.rs  ui_test.rs
captrack-pgo-lint/tests/fixtures/ui_btreemap_cap/: btreemap_cap.stderr
captrack-pgo-lint/tests/fixtures/ui_btreeset_cap/: btreeset_cap.rs
captrack-pgo-lint/tests/fixtures/ui_bytes_mut_cap/: bytes_mut_cap.rs
captrack-pgo-lint/tests/fixtures/ui_dashmap_cap/: dashmap_cap.rs  dashmap_cap.stderr
captrack-pgo-lint/tests/fixtures/ui_hashmap_hasher/: hashmap_hasher.rs  hashmap_hasher.stderr
captrack-pgo-lint/tests/fixtures/ui_hashset_hasher/: hashset_hasher.stderr
captrack-pgo-lint/tests/fixtures/ui_indexmap_hasher/: indexmap_hasher.rs
captrack-pgo-lint/tests/fixtures/ui_indexset_cap/: indexset_cap.stderr
captrack-pgo-lint/tests/fixtures/ui_per_type_binary_heap_cap/: binary_heap_cap.rs  binary_heap_cap.stderr
captrack-pgo-lint/tests/fixtures/ui_per_type_btreemap_with_hasher_env_still_warn_only/: btreemap_cap.rs
captrack-pgo-lint/tests/fixtures/ui_per_type_bytes_mut_cap/: bytes_mut_cap.stderr
captrack-pgo-lint/tests/fixtures/ui_per_type_dashmap_hasher_fx/: dashmap_hasher.rs  dashmap_hasher.stderr
captrack-pgo-lint/tests/fixtures/ui_per_type_hashbrown_map_cap/: hashbrown_map_cap.stderr
captrack-pgo-lint/tests/fixtures/ui_per_type_hashmap_ascribed_hasher_fx/: hashmap_ascribed_hasher.stderr
captrack-pgo-lint/tests/fixtures/ui_per_type_hashmap_cap_only/: hashmap_cap.stderr
captrack-pgo-lint/tests/fixtures/ui_per_type_hashset_cap_only/: hashset_cap.rs  hashset_cap.stderr
captrack-pgo-lint/tests/fixtures/ui_per_type_hashset_hasher_fx/: hashset_hasher.rs
captrack-pgo-lint/tests/fixtures/ui_per_type_indexmap_cap/: indexmap_cap.stderr
captrack-pgo-lint/tests/fixtures/ui_per_type_scc_hashmap_cap/: scc_hashmap_cap.rs
captrack-pgo-lint/tests/fixtures/ui_per_type_scc_hashmap_hasher_fx/: scc_hashmap_hasher.stderr
captrack-pgo-lint/tests/fixtures/ui_per_type_scc_hashset_cap/: scc_hashset_cap.rs
captrack-pgo-lint/tests/fixtures/ui_per_type_scc_hashset_hasher_fx/: scc_hashset_hasher.rs
captrack-pgo-lint/tests/fixtures/ui_per_type_smallvec_cap/: smallvec_cap.rs
captrack-pgo-lint/tests/fixtures/ui_per_type_string_with_hasher_env_still_cap_only/: string_cap.rs
captrack-pgo-lint/tests/fixtures/ui_per_type_vec_with_hasher_env_still_cap_only/: vec_cap.rs
captrack-pgo-lint/tests/fixtures/ui_scc_hashmap_hasher/: scc_hashmap_hasher.rs
captrack-pgo-lint/tests/fixtures/ui_scc_hashset_hasher/: scc_hashset_hasher.stderr
captrack-pgo-lint/tests/fixtures/ui_vec_cap/: vec_cap.stderr
captrack-pgo-lint/tests/fixtures/ui_vecdeque_cap/: vecdeque_cap.rs
captrack-pgo-lint/ui/: detect.rs  detect.stderr  empty.rs  suggest.fixed  suggest.rs  suggest.stderr
captrack-pgo-lint/ui_hasher/: suggest_hasher.rs  suggest_hasher.stderr
captrack-pgo-lint/ui_instrument/: instrument.rs  instrument.stderr
captrack-pgo-lint/ui_per_type/: btreeset_cap.stderr  hashbrown_map_cap.rs  hashmap_ascribed_hasher.rs  hashmap_cap.rs  hashmap_pinned_fx_hasher.rs  hashmap_pinned_fx_hasher.stderr  indexmap_cap.rs  indexmap_hasher.stderr  indexset_cap.rs  indexset_hasher.rs  indexset_hasher.stderr  scc_hashmap_cap.stderr  scc_hashset_cap.stderr  scc_treeindex_cap.rs  scc_treeindex_cap.stderr  smallvec_cap.stderr  string_cap.stderr  vecdeque_cap.stderr
captrack-pgo/src/: analyze.rs  apply.rs  cli.rs  lint_apply.rs  lint_instrument.rs  main.rs  measure.rs  merge.rs  model.rs  plan.rs  report.rs  rules.rs  scan.rs  staleness.rs  undo.rs  wire.rs  workspace.rs
captrack-pgo/src/profile/: captrack.rs  dhat.rs  mod.rs
captrack-pgo/tests/: auto_end_to_end.rs  instrument.rs  lint_apply.rs  measure_tests.rs  uninstrument.rs
captrack-pgo/tests/fixtures/: captrack-dump.sample.json  dhat-heap.sample.json  scan_dynamic_cap.rs  scan_hashmap_with_hasher.rs  scan_skip_macro_body.rs  scan_test_module_skipped.rs  scan_vec_new.rs  scan_vec_with_capacity.rs
docs/: CAPACITY-PGO-PLAN.md
docs/checkpoints/: 2026-06-28-2103.md  2026-06-29-1059.md  2026-06-29-1754.md  2026-06-29-2151.md  2026-06-29-2310.md
examples/: declare_family.rs  quickstart.rs
src/: aliases.rs  autodump.rs  cap_inspect.rs  ctor.rs  dump.rs  hasher.rs  lib.rs  registry.rs  reservoir.rs  stats.rs
src/tests/: binary_heap_tests.rs  cap_inspect_tests.rs  creation_count_tests.rs  fxhash_tests.rs  hashbrown_hashmap_tests.rs  mod.rs  off_feature_tests.rs  on_feature_tests.rs  per_call_override_tests.rs  reservoir_tests.rs  smallvec_tests.rs  string_tests.rs  wrap_from_tests.rs
src/tracked/: binary_heap.rs  btreemap.rs  btreeset.rs  bytesmut.rs  dashmap.rs  hashbrown_hashmap.rs  hashmap.rs  hashset.rs  indexmap.rs  indexset.rs  mod.rs  scc_hashmap.rs  scc_hashset.rs  scc_treeindex.rs  smallvec.rs  string.rs  vec.rs  vecdeque.rs
tests/: declare_collections.rs
