[package]
name = "captrack-macros"
version = "0.1.0"
edition = "2021"
authors = ["Marat K <phpcraftdream@gmail.com>"]
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "Proc-macro companion for captrack — generates per-hasher macro families via declare_collections!."
repository = "https://github.com/PHPCraftdream/captrack"
homepage = "https://github.com/PHPCraftdream/captrack"
documentation = "https://docs.rs/captrack"
keywords = ["telemetry", "proc-macro", "captrack", "collections", "macros"]
categories = ["development-tools::profiling"]
readme = "../README.md"
include = [
    "src/**/*",
    "Cargo.toml",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
