[package]
name = "captrack-pgo"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["Marat K <phpcraftdream@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Profile-guided capacity optimization for Rust collections — measure with dhat or captrack, propose data-driven Vec::with_capacity(N) values, apply in-place."
repository = "https://github.com/PHPCraftdream/captrack"
homepage = "https://github.com/PHPCraftdream/captrack"
documentation = "https://docs.rs/captrack-pgo"
readme = "../README.md"
keywords = ["capacity", "pgo", "profiling", "telemetry", "performance"]
categories = ["development-tools::profiling", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ignore = "0.4"  # gitignore-aware walk (used by workspace::walk_rust_files)
sha2 = "0.10"
tempfile = "3"
captrack = { path = "..", default-features = false }
# Used by the `wire` / `unwire` subcommands to patch workspace Cargo.toml files
# while preserving comments and whitespace.
toml_edit = "0.22"
# Used by `wire` to expand workspace `members = ["crates/*"]` glob patterns.
glob = "0.3"

[dev-dependencies]

[[bin]]
name = "captrack-pgo"
path = "src/main.rs"
